--- a/src/TaskManager/TaskManager.Api/TaskManager.Api.csproj
+++ b/src/TaskManager/TaskManager.Api/TaskManager.Api.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TaskManager.Core\TaskManager.Core.csproj" />
-    <ProjectReference Include="..\TaskManager.Storage\TaskManager.Infrastructure.csproj" />
+    <ProjectReference Include="..\TaskManager.Infrastructure\TaskManager.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
